[package]
name = "validjson"
version = "0.1.4"
authors = ["Russell Myers <mezner@russellmyers.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple JSON schema and content validator executable"
repository = "https://github.com/Mezner/validjson"
readme = "README.md"

[dependencies]
valico = "3.1.0"
structopt = "0.3"
serde_json = "1.0"
